Arrumado grandes bugs e conflitos com tabela de usuario e alteração para nome certo controladores e rotas da api
