# backend/src/server.ts
@@ -11,7 +11,7 @@ import cors from "cors";
 import stopsRoutes from "./api/routes/stops.routes";
 import linesRoutes from "./api/routes/lines.routes";
 import routesRoutes from "./api/routes/routes.routes";
-import loginRoutes from "./api/routes/login.routes";
+import userRoutes from "./api/routes/user.routes";
 import notifRoutes from "./api/routes/notif.routes";
 
 dotenv.config();
@@ -51,7 +51,7 @@ app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument, {
 app.use("/api/v1/stops", stopsRoutes);
 app.use("/api/v1/lines", linesRoutes);
 app.use("/api/v1/routes", routesRoutes);
-app.use("/api/v1/login", loginRoutes);
+app.use("/api/v1/users", userRoutes);
 app.use("/api/v1/notifications", notifRoutes);
 
 // Teste de Rota Inicial com Tipagem em TY
